crates/swc/tests/stacktrace/deno-10014/output/stacks.txt
$DIR/tests/stacktrace/deno-10014/input/_exec.js:7
        throw new Error("Hello");
        ^


Error: Hello
    at t ($DIR/tests/stacktrace/deno-10014/input/_exec.js:7:15)
    at t ($DIR/tests/stacktrace/deno-10014/input/_exec.js:9:5)
    at a ($DIR/tests/stacktrace/deno-10014/input/_exec.js:2:5)
    at Object.<anonymous> ($DIR/tests/stacktrace/deno-10014/input/_exec.js:11:1)
    at node:internal/main/run_main_module:23:47
